<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detailProductImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_height"
            android:layout_marginBottom="@dimen/detail_image_vertical_margin"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/detailProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailProductImage"
            android:layout_marginBottom="@dimen/detail_text_margin"
            android:text="Product Name"
            android:textSize="@dimen/detail_title_size" />

        <TextView
            android:id="@+id/detailProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailProductName"
            android:layout_marginBottom="@dimen/detail_text_margin"
            android:text="Product Quantity"
            android:textSize="@dimen/detail_price_size" />

        <TextView
            android:id="@+id/detailProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailProductQuantity"
            android:layout_marginBottom="@dimen/detail_text_margin"
            android:text="Product Price"
            android:textSize="@dimen/detail_price_size" />

        <Button
            android:id="@+id/btnIncrease"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btnDecrease"
            android:text="@string/label_button_increse_quantity"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/btnDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/detailProductPrice"
            android:layout_gravity="right"
            android:text="@string/label_button_decrease_quantity"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/btnOrderMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnIncrease"
            android:text="@string/label_button_order_more" />


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnOrderMore"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/label_button_delete_product" />
    </RelativeLayout>
</ScrollView>